syntax = "proto3";
package io.restorecommerce.graph;

import "google/protobuf/any.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/resource_base.proto";

// Service provides the CRUD operations
service Service {
  rpc Traversal (TraversalRequest) returns (stream TraversalResponse);
}

message TraversalRequest {
  // Document handle either _id or _key value
  oneof vertex {
    Vertices vertices = 1;
    Collection collection = 2;
  }
  Options opts = 3;
  bool path = 4;
  io.restorecommerce.auth.Subject subject = 5;
  repeated Filters filters = 6;
}

message Vertices {
  string collection_name = 1;
  repeated string start_vertex_id = 2;
}

message Collection {
  string collection_name = 1;
  uint32 limit = 2;
  uint32 offset = 3;
  repeated io.restorecommerce.resourcebase.Sort sort = 4;
}

message Options {
 repeated string include_vertex = 1; // to include vertices
 repeated string exclude_vertex = 2; // to exclude vertices
 repeated string include_edge = 3; // to include vertices
 repeated string exclude_edge = 4; // to exclude vertices
 Direction direction = 5; // either inbound or outbound, defaults to outbound direction
 enum Direction {
   OUTBOUND = 0;
   INBOUND = 1;
 }
}


message Filters {
  string entity = 1; // entity on which the filters are applied
  string edge = 2; // if edge is specified depending on the direction filter are applied only for those entities
  repeated Filter filter = 3;
  enum Operator {
    and = 0;
    or = 1;
  }
  Operator operator = 4;
}

message Filter {
  string field = 1;
  enum Operation {
    eq = 0;
    lt = 1;
    lte = 2;
    gt = 3;
    gte = 4;
    isEmpty = 5;
    iLike = 6;
    in = 7;
    neq = 8;
  }
  Operation operation = 2;
  string value = 3;
  enum ValueType {
    STRING = 0; // default value type if not specified
    NUMBER = 1;
    BOOLEAN = 2;
    DATE = 3;
    ARRAY = 4;
  }
  ValueType type = 4;
  repeated Filters filters = 5;
}

message TraversalResponse {
  google.protobuf.Any data = 1; // vertices
  google.protobuf.Any paths = 2; // traversed vertices paths
  io.restorecommerce.status.OperationStatus operation_status = 3;
}